--- a/src/core/components/DataDisplay.styl
+++ b/src/core/components/DataDisplay.styl
@@ -1,10 +1,13 @@
 .DataDisplay {
   margin: 16px;
-  font-family: Monaco, monospace;
-  font-size: 12px;
 
   &-Filter {
     margin-bottom: 16px;
     font-size: 24px;
+  }
+
+  &-Data {
+    font-family: Monaco, monospace;
+    font-size: 12px;
   }
 }
